samples/_failures_safe/1761320437_8c5ed2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b94e9b6.c:167:1: error: expected ‘{’ at end of input
  167 | int tokenize_input(const char *input, struct
      | ^~~
